--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,16 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M16,0L16,0A16,16 0,0 1,32 16L32,16A16,16 0,0 1,16 32L16,32A16,16 0,0 1,0 16L0,16A16,16 0,0 1,16 0z"
-      android:fillColor="#282830"/>
-  <path
-      android:pathData="M19,22L13,16L19,10"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+      android:pathData="M14.999,20.67C14.809,20.67 14.619,20.6 14.469,20.45L7.949,13.93C6.889,12.87 6.889,11.13 7.949,10.07L14.469,3.55C14.759,3.26 15.239,3.26 15.529,3.55C15.819,3.84 15.819,4.32 15.529,4.61L9.009,11.13C8.529,11.61 8.529,12.39 9.009,12.87L15.529,19.39C15.819,19.68 15.819,20.16 15.529,20.45C15.379,20.59 15.189,20.67 14.999,20.67Z"
+      android:fillColor="#000000"/>
 </vector>
