--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_start_add_event">#9640ED</color>
+    <color name="color_end_add_event">#F87A53</color>
+    <color name="color_button">#F87A53</color>
+    <color name="color_process_bar">#F87A53</color>
+    <color name="pink">#FF77B7</color>
+    <color name="purple">#624E88</color>
+    <color name="yellow">#FEEC37</color>
 </resources>
