--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,8 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginVertical="@dimen/_8sdp"
-    android:layout_marginHorizontal="@dimen/_12sdp"
+    android:background="@color/white"
+    android:paddingVertical="@dimen/_16sdp"
+    android:paddingHorizontal="@dimen/_12sdp"
     tools:context=".ui.activity.HomeActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -19,17 +20,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            style="@style/TextStyleNavbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_regular"
             android:gravity="start"
             android:layout_weight="1"
             android:text="@string/plant_watering_system"
-            android:textColor="@color/black"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ic_setting"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_gravity="center"
@@ -40,13 +41,153 @@
         android:id="@+id/cl_temperature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingVertical="@dimen/_12sdp"
         android:background="@drawable/shape_bg_temperature"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_navbar">
 
+        <TextView
+            android:id="@+id/tv_temperature"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/temperature"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/tv_value_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30*C"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_36sdp"
+            android:fontFamily="@font/roboto_regular"
+            app:layout_constraintTop_toBottomOf="@id/tv_temperature"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_humidity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingVertical="@dimen/_12sdp"
+        android:background="@drawable/shape_bg_humidity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_temperature">
+
+        <TextView
+            android:id="@+id/tv_humidity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/humidity"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tv_value_humidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="66%"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_36sdp"
+            android:fontFamily="@font/roboto_regular"
+            app:layout_constraintTop_toBottomOf="@id/tv_humidity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_soil_moisture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingVertical="@dimen/_12sdp"
+        android:background="@drawable/shape_bg_soil_moisture"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_humidity">
+
+        <TextView
+            android:id="@+id/tv_soil_moisture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/soil_moisture"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tv_value_soil_moisture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="66%"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_36sdp"
+            android:fontFamily="@font/roboto_regular"
+            app:layout_constraintTop_toBottomOf="@id/tv_soil_moisture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/sw_watering"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        app:thumbTint="#A4A4A8"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginStart="@dimen/_12sdp"
+        app:track="@drawable/switch_track"
+        app:trackTint="@color/switch_track"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_soil_moisture"/>
+
+    <TextView
+        style="@style/TextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/watering"
+        android:textSize="@dimen/_12sdp"
+        app:layout_constraintStart_toStartOf="@id/sw_watering"
+        app:layout_constraintTop_toBottomOf="@id/sw_watering"/>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/sw_predict_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        app:thumbTint="#A4A4A8"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        app:track="@drawable/switch_track"
+        app:trackTint="@color/switch_track"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_soil_moisture"/>
+
+    <TextView
+        style="@style/TextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/predict_mode"
+        android:textSize="@dimen/_12sdp"
+        app:layout_constraintEnd_toEndOf="@id/sw_predict_mode"
+        app:layout_constraintTop_toBottomOf="@id/sw_predict_mode"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
