--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginVertical="@dimen/_16sdp"
-    android:layout_marginHorizontal="@dimen/_12sdp"
+    android:background="@color/white"
+    android:paddingVertical="@dimen/_16sdp"
+    android:paddingHorizontal="@dimen/_12sdp"
     tools:context=".ui.activity.RegisterActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -18,22 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_back" />
-
         <TextView
+            style="@style/TextStyleNavbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_regular"
             android:gravity="center"
             android:text="@string/register"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20sdp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_30sdp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -47,17 +40,17 @@
         app:layout_constraintTop_toBottomOf="@id/ll_navbar">
 
         <TextView
+            style="@style/TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
 
         <androidx.appcompat.widget.AppCompatEditText
+            style="@style/TextStyle"
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -72,17 +65,17 @@
         app:layout_constraintTop_toBottomOf="@id/ll_name">
 
         <TextView
+            style="@style/TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/user_name"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
 
         <androidx.appcompat.widget.AppCompatEditText
+            style="@style/TextStyle"
             android:id="@+id/et_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -97,22 +90,22 @@
         app:layout_constraintTop_toBottomOf="@id/ll_user_name">
 
         <TextView
+            style="@style/TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
 
         <androidx.appcompat.widget.AppCompatEditText
+            style="@style/TextStyle"
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_regular"
             android:textSize="@dimen/_14sdp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bt_login"
+        android:id="@+id/bt_register"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_32sdp"
@@ -125,6 +118,7 @@
         app:layout_constraintTop_toBottomOf="@id/ll_password"/>
 
     <TextView
+        style="@style/TextStyle"
         android:id="@+id/tv_login_now"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -133,5 +127,5 @@
         android:textSize="@dimen/_12sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bt_login" />
+        app:layout_constraintTop_toBottomOf="@id/bt_register" />
 </androidx.constraintlayout.widget.ConstraintLayout>
