--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,16 @@
     </style>
 
     <style name="Theme.BTL_IOT" parent="Base.Theme.BTL_IOT" />
+    <style name="TextStyleNavbar">
+        <item name="android:textSize">@dimen/_18sdp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="font">@font/roboto_medium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+    <style name="TextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="font">@font/roboto_regular</item>
+    </style>
 </resources>
