--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -84,9 +84,9 @@
                         style="@style/TextStyleNavbar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="32°"
+                        android:text="25.2°C"
                         android:textColor="#FFFFFF"
-                        android:textSize="48sp"
+                        android:textSize="@dimen/_30sdp"
                         android:textStyle="bold" />
 
                     <!-- Weather Status -->
@@ -95,9 +95,9 @@
                         style="@style/TextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sunny"
+                        android:text="51%"
                         android:textColor="#000000"
-                        android:textSize="18sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -134,7 +134,7 @@
                             android:fontFamily="@font/roboto_regular"
                             android:text="@string/temperature"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/_16sdp" />
+                            android:textSize="@dimen/_14sdp" />
 
                         <TextView
                             android:id="@+id/tv_value_temperature"
@@ -142,7 +142,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="30*C"
+                            android:text="26°C"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_36sdp" />
                     </LinearLayout>
@@ -174,7 +174,7 @@
                             android:fontFamily="@font/roboto_regular"
                             android:text="@string/humidity"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/_16sdp" />
+                            android:textSize="@dimen/_14sdp" />
 
                         <TextView
                             android:id="@+id/tv_value_humidity"
@@ -182,7 +182,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="66%"
+                            android:text="51%"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_36sdp" />
                     </LinearLayout>
@@ -215,7 +215,7 @@
                             android:gravity="center"
                             android:text="@string/soil_moisture"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/_16sdp" />
+                            android:textSize="@dimen/_14sdp" />
 
                         <TextView
                             android:id="@+id/tv_value_soil_moisture"
@@ -223,7 +223,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="66%"
+                            android:text="N/A"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_36sdp" />
                     </LinearLayout>
